# gfdl-tracker

./: CMakeLists.txt  configure.trk
modulefiles/: gaeaC6.lua  hera.lua  hercules.lua  jet.lua  modulefile.hera  modulefile.jet  modulefile.orion  modulefile.orion.lua  modulefile.wcoss2  modulefile.wcoss_cray  modulefile.wcoss_dell_p3  orion.lua  wcoss2.lua
src/: build_all_cmake.sh  machine-setup.sh
src/gettrk.fd/: CMakeLists.txt  README  cwaitfor.c  gettrk_main.f  gettrk_modules.f
src/gettrk.fd/namelist_examples/: namelist.gettrk_20220602
src/supvit.fd/: CMakeLists.txt
src/tave.fd/: CMakeLists.txt
src/vint.fd/: CMakeLists.txt
ush/: build_all_cmake.sh
